<resources>

    <string name="app_name">个人理财</string>
    <string name="tv_loginnum">账号</string>
    <string name="tv_pass">密码</string>
    <string name="txlogin">登录</string>
    <string name="txregister">注册</string>
    <string name="tv_usrtttrg">账号</string>
    <string name="tv_password">密码</string>
    <string name="tv_conregpwd">确认密码</string>
    <string name="txsubmit">提交</string>
    <string name="txcancel">取消</string>
    <string name="action_settings">Settings</string>
	<string name="expend">支出</string>
	<string name="income">收入</string>
	<string name="shouye">首页</string>
	<string name="account">明细</string>
	<string name="myFavorities">我的收藏</string>
	<string name="myComments">我的评论</string>
	<string name="settings">设置</string>

</resources>
